--- a/src/index.css
+++ b/src/index.css
@@ -1,14 +1,34 @@
 body {
   margin: 0;
-  padding: 0;
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
-    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
-    sans-serif;
+  padding: 0;  
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
-    monospace;
+.App
+{
+  position: absolute;
+  left:50vw;    
+  transform: translate(-50%, 10%);
+  display: flex;
+  flex-direction: column;
+  flex-wrap: wrap;
+  justify-content: center;
+  align-items: stretch; 
+  align-content: center;  
+
+}
+
+
+.content{
+  margin-top: 1rem;
+}
+
+.header{
+  text-align: center;  
+}
+
+.sr-only, .form-inline{
+  justify-content: center;
+  text-align: center;
 }
